@@ -1,11 +1,11 @@
 package dev.ultreon.quantum.text;
 
+import com.badlogic.gdx.utils.Array;
 import dev.ultreon.ubo.types.ListType;
 import dev.ultreon.ubo.types.MapType;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 public class LiteralText extends MutableText {
     private final @NotNull String text;
@@ -57,14 +57,15 @@ public class LiteralText extends MutableText {
 
     @Override
     public LiteralText copy() {
-        var copy = this.extras.stream().map(TextObject::copy).collect(Collectors.toList());
+        var copy = this.extras.stream().map(TextObject::copy).toList();
         var literalText = new LiteralText(this.text);
         literalText.extras.addAll(copy);
         return literalText;
     }
 
-    public MutableText setColor(ColorCode colorCode) {
-        this.style.color(colorCode);
-        return this;
+    @Override
+    @NotNull
+    protected StylePart createPart() {
+        return new StylePart(text, style.compact(), style.compactColor(), style.size());
     }
 }
